--- a/recipes/chicken_meatballs.html
+++ b/recipes/chicken_meatballs.html
@@ -7,5 +7,6 @@
 </head>
     <body>
         <h1>Garlic Butter Chicken Meatballs with Cauliflower Rice</h1>
+        <img src="./recipe_pics/chicken-meal-prep-menu.jpg" alt="chicken meatball picture" height = 800 width = 1200>
     </body>
 </html>
