added picture for the readme file

--- a/recipes/chicken_meatballs.html
+++ b/recipes/chicken_meatballs.html
@@ -8,5 +8,8 @@
     <body>
         <h1>Garlic Butter Chicken Meatballs with Cauliflower Rice</h1>
         <img src="./recipe_pics/chicken-meal-prep-menu.jpg" alt="chicken meatball picture" height = 800 width = 1200>
+        <h3>Description</h3>
+        <h3>Ingredients</h3>
+        <h3>Steps</h3>
     </body>
 </html>
