added decription to chicken meatball page

--- a/recipes/chicken_meatballs.html
+++ b/recipes/chicken_meatballs.html
@@ -8,8 +8,12 @@
     <body>
         <h1>Garlic Butter Chicken Meatballs with Cauliflower Rice</h1>
         <img src="./recipe_pics/chicken-meal-prep-menu.jpg" alt="chicken meatball picture" height = 800 width = 1200>
-        <h3>Description</h3>
-        <h3>Ingredients</h3>
-        <h3>Steps</h3>
+        <h2>Description</h2>
+            <p>400 calories, 25.8 grams of protein</p>
+            <p>Meal prep time: 25 mins, for 4 servings</p>
+            <p>An easy meal prep featuring delicious chicken meatballs and cauliflower rice. Perfect for a high protein low calorie diet.</p>
+            <p>Credits to eatwell101</p>
+        <h2>Ingredients</h2>
+        <h2>Steps</h2>
     </body>
 </html>
