did half of ingredients lists for meatballs

--- a/recipes/chicken_meatballs.html
+++ b/recipes/chicken_meatballs.html
@@ -14,6 +14,11 @@
             <p>An easy meal prep featuring delicious chicken meatballs and cauliflower rice. Perfect for a high protein low calorie diet.</p>
             <p>Credits to eatwell101</p>
         <h2>Ingredients</h2>
+            <ul>
+                <li>450 g of ground chicken</li>
+                <li>1/2 cup of shredded lowfat cheese</li>
+                <li>4 cloves of garlic, grated + 2 cloves of garlic, minced</li>
+            </ul>
         <h2>Steps</h2>
     </body>
 </html>
