finished ingredients list for meatballs

--- a/recipes/chicken_meatballs.html
+++ b/recipes/chicken_meatballs.html
@@ -18,6 +18,16 @@
                 <li>450 g of ground chicken</li>
                 <li>1/2 cup of shredded lowfat cheese</li>
                 <li>4 cloves of garlic, grated + 2 cloves of garlic, minced</li>
+                <li>1 teaspoon italian seasoning</li>
+                <li>1/2 teaspoon red crushed chili pepper flakes</li>
+                <li>1 bouillon cube (optional)</li>
+                <li>1/2 cup chicken stock</li>
+                <li>Salt and pepper, to taste</li>
+                <li>1/2 cup chopped parsely or cilantro</li>
+                <li>3 tablespoons butter</li>
+                <li>Juice of 1/2 lemon</li>
+                <li>1 tablespoon hot sauce of choice</li>
+                <li>1 packet of riced cauliflower</li>
             </ul>
         <h2>Steps</h2>
     </body>
