finished chicken meatball page, created file for burritobowl page

--- a/recipes/chicken_meatballs.html
+++ b/recipes/chicken_meatballs.html
@@ -30,5 +30,13 @@
                 <li>1 packet of riced cauliflower</li>
             </ul>
         <h2>Steps</h2>
+            <ol>
+                <li>Make cauliflower rice with a large grater or food processor. Transfer to a shallow plate with <strong>1/2 cup water </strong>and cook covered in the microwave for <strong>4 minutes</strong></li>
+                <li>In a large bowl combine chicken, cheese, grated garlic, italian seasoning, bouillon cube, chili flakes, chopped parsely, and black pepper. Mix well and form medium balls.</li>
+                <li>Melt <strong>2 tablespoons</strong> of butter in large skillet over medium-low heat. <strong>Cook the chicken meatballs</strong> for <strong>8-10 minutes</strong> on all sides until browned and cooked through. While cooking, baste the meatball with the butter and juices.</li>
+                <li>In the same skillet melt the remaining butter, add lemon juice, chicken stock, hot sauce, minced garlice, parsley, and red pepper flakes. Cook for <strong>3-4 minutes</strong>, stirring regularly until the sauce had reduced. Adjust seasoning as needed.</li>
+                <li>Divide cauliflower rice into meal prep containers. Top with chicken meatballs and garnish with lemon slices. Drizzle a little of the sauce over the meatballs and rice. Reheat your chicken meatballs meal prep quickly in the microwave when ready to eat.</li>
+            </ol>
+        <h2>Enjoy!</h2>
     </body>
 </html>
