--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href = "recipes/chicken_meatballs.html">Garlic Butter Chicken Meatballs</a>
+        <ul>
+            <li><a href = "recipes/chicken_meatballs.html">Garlic Butter Chicken Meatballs</a></li>
+            <li><a href = "recipes/ncburrito_bowl.html">Naked Chicken Burrito bowl</a></li>
+        </ul>
+        
+        
     </body>
 </html>
