--- a/recipes/ncburrito_bowl.html
+++ b/recipes/ncburrito_bowl.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Naked Chicken Burrito Bowl</title>
 </head>
 <body>
-    
+    <h1>Naked Chicken Burrito Bowl</h1>
+    <img src="recipe_pics/burrito_bowl.png" alt="burrito bowl picture" height = 392 width=700>
+    <h2>Description</h2>
+        <p>378 calories, 30 grams of protein</p>
+        <p>Meal prep time: 35 mins, for 4 servings</p>
+        <p>A fresh, healthy and customizable lunch thats high in protein and low in calories.</p>
+        <p>Credits to myprotein.com</p>
+    <h2>Ingredients</h2>
+    <h2>Steps</h2>
 </body>
 </html>
