completed burrito bowl ingredients

--- a/recipes/ncburrito_bowl.html
+++ b/recipes/ncburrito_bowl.html
@@ -11,9 +11,21 @@
     <h2>Description</h2>
         <p>378 calories, 30 grams of protein</p>
         <p>Meal prep time: 35 mins, for 4 servings</p>
-        <p>A fresh, healthy and customizable lunch thats high in protein and low in calories.</p>
+        <p>A fresh, healthy and customizable lunch thats high in protein and low in calories, featuring chicken and beans.</p>
         <p>Credits to myprotein.com</p>
     <h2>Ingredients</h2>
+        <ul>
+            <li>1 tablespoon olive oil</li>
+            <li>1 onion (diced)</li>
+            <li>2 garlic cloves (crushed)</li>
+            <li>2 chicken breasts (cubed)</li>
+            <li>1 pinch salt</li>
+            <li>1 pinch pepper</li>
+            <li>1 teaspoon paprika</li>
+            <li>2 cans black beans(drained)</li>
+            <li>1 jar salsa</li>
+            <li>200 grams of brown rice (50 grams per serving)</li>
+        </ul>
     <h2>Steps</h2>
 </body>
 </html>
