finished burrito bowl page

--- a/recipes/ncburrito_bowl.html
+++ b/recipes/ncburrito_bowl.html
@@ -27,5 +27,11 @@
             <li>200 grams of brown rice (50 grams per serving)</li>
         </ul>
     <h2>Steps</h2>
+        <ol>
+            <li>Heat the olive oil in a large non-stick pan and add onion. Fry for a few minutes to soften and add crushed garlic.</li>
+            <li>Add cubed chicken to pan, season with salt, pepper, and paprika, then stir well. Cool for <strong>5-10 minutes</strong> until chicken is completely cooked through.</li>
+            <li>Tip the drained beans and salsa, mixing well to combine in the pan. Leave to cook through for a few minutes and then portion up with the cooked rice in meal prep containers.</li>
+        </ol>
+    <h2>Enjoy!</h2>
 </body>
 </html>
