--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href = "recipes/chicken_meatballs.html">Garlic Butter Chicken Meatballs</a></li>
-            <li><a href = "recipes/ncburrito_bowl.html">Naked Chicken Burrito bowl</a></li>
-        </ul>
-        
+        <h2>Meals</h2>
+            <ul>
+                <li><a href = "recipes/chicken_meatballs.html">Garlic Butter Chicken Meatballs</a></li>
+                <li><a href = "recipes/ncburrito_bowl.html">Naked Chicken Burrito bowl</a></li>
+            </ul>
+        <h2>Snacks and Treats</h2>
         
     </body>
 </html>
