description of smoothie completed

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 <li><a href = "recipes/ncburrito_bowl.html">Naked Chicken Burrito bowl</a></li>
             </ul>
         <h2>Snacks and Treats</h2>
+            <ul>
+                <li><a href = "recipes/blueberry_smoothie.html">Blueberry Smoothie</a></li>
+            </ul>
         
     </body>
 </html>
