steps for smoothie completed

--- a/recipes/blueberry_smoothie.html
+++ b/recipes/blueberry_smoothie.html
@@ -14,6 +14,14 @@
         <p>A healthy shake made with almond milk, greek yogurt, and vanilla protein powder. A delicious way to add protein to your day.</p>
         <p>Credits to A Sweet Pea Chef</p>
     <h2>Ingredients</h2>
+        <ul>
+            <li>3/4 cup unsweetened almond milk or milk of choice</li>
+            <li>1/2 cup full fat greek yogurt</li>
+            <li>1 scoop vanilla protein powder</li>
+            <li>3/4 cup frozen blueberries</li>
+            <li>3-4 ice cubes as needed</li>
+            <li>1 teaspoon raw honey (optional for added sweetness)</li>
+        </ul>
     <h2>Steps</h2>
     <h2>Enjoy</h2>
 </body>
