completed steps on smoothie

--- a/recipes/blueberry_smoothie.html
+++ b/recipes/blueberry_smoothie.html
@@ -23,6 +23,11 @@
             <li>1 teaspoon raw honey (optional for added sweetness)</li>
         </ul>
     <h2>Steps</h2>
+        <ol>
+            <li>Starting with the milk, place all ingredients into a blender</li>
+            <li>To reach preferred consistency, start without ice and slowly add ice</li>
+            <li>If too thick, add milk, add honey to taste</li>
+        </ol>
     <h2>Enjoy</h2>
 </body>
 </html>
