finishing touches on smoothie page (added exclamation mark to enjoy)

--- a/recipes/blueberry_smoothie.html
+++ b/recipes/blueberry_smoothie.html
@@ -28,6 +28,6 @@
             <li>To reach preferred consistency, start without ice and slowly add ice</li>
             <li>If too thick, add milk, add honey to taste</li>
         </ol>
-    <h2>Enjoy</h2>
+    <h2>Enjoy!</h2>
 </body>
 </html>
