Added korean beef bowl pic and files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <h2>Meals</h2>
             <ul>
                 <li><a href = "recipes/chicken_meatballs.html">Garlic Butter Chicken Meatballs</a></li>
-                <li><a href = "recipes/ncburrito_bowl.html">Naked Chicken Burrito bowl</a></li>
+                <li><a href = "recipes/ncburrito_bowl.html">Naked Chicken Burrito Bowl</a></li>
+                <li><a href = "recipes/kbeef_bowl.html">Korean Beef Bowl</a></li>
             </ul>
         <h2>Snacks and Treats</h2>
             <ul>
