completed description of kbeef bowl

--- a/recipes/kbeef_bowl.html
+++ b/recipes/kbeef_bowl.html
@@ -6,6 +6,15 @@
     <title>Korean Beef Bowl</title>
 </head>
 <body>
-    
+    <h1>Korean Beef Bowl</h1>
+    <img src="recipe_pics/kbeef_bowl.jpg" alt="Korean Beef Bowl Picture" height=750 width = 500>
+    <h2>Description</h2>
+        <p>487 calories, 28 grams of protein</p>
+        <p>Meal prep time: 30 mins, for 4 servings</p>
+        <p>Super fast and delicious simplified meal. A great dinner choice with high protein!</p>
+        <p>Credits to Cooking Classy</p>
+    <h2>Ingredients</h2>
+    <h2>Steps</h2>
+    <h2>Enjoy!</h2>
 </body>
 </html>
