completed ingredients section kbeef

--- a/recipes/kbeef_bowl.html
+++ b/recipes/kbeef_bowl.html
@@ -14,6 +14,22 @@
         <p>Super fast and delicious simplified meal. A great dinner choice with high protein!</p>
         <p>Credits to Cooking Classy</p>
     <h2>Ingredients</h2>
+        <ul>
+            <li>1 1/2 tablespoon honey*</li>
+            <li>1 1/2 tablespoon dark brown/white sugar</li>
+            <li>1 tablespoon sesame oil</li>
+            <li>2 teaspoon lime juice</li>
+            <li>3 tablespoon soy sauce</li>
+            <li>2 tablespoon water</li>
+            <li>2 teaspoon vegetable oil</li>
+            <li>18 oz 85% lean ground beef</li>
+            <li>1/3 cup chopped green onions (white portion)</li>
+            <li>1 tablespoon peeled and minced fresh ginger</li>
+            <li>1 tablespoon minced fresh garlic</li>
+            <li>1/2 teaspoon cornstarch mixed with 2 teaspoon water (optional)</li>
+            <li>chopped green onions (green portion) for garnish</li>
+            <li>2 cups cooked white or brown rice</li>
+        </ul>
     <h2>Steps</h2>
     <h2>Enjoy!</h2>
 </body>
