revised ingredients section kbeef

--- a/recipes/kbeef_bowl.html
+++ b/recipes/kbeef_bowl.html
@@ -30,6 +30,7 @@
             <li>chopped green onions (green portion) for garnish</li>
             <li>2 cups cooked white or brown rice</li>
         </ul>
+        <p><strong>*</strong>can be replaced by the sugar</p>
     <h2>Steps</h2>
     <h2>Enjoy!</h2>
 </body>
