completed kbeef page

--- a/recipes/kbeef_bowl.html
+++ b/recipes/kbeef_bowl.html
@@ -32,6 +32,15 @@
         </ul>
         <p><strong>*</strong>can be replaced by the sugar</p>
     <h2>Steps</h2>
+        <ol>
+            <li>In a bowl, mix honey, sugar, sesame oil, lime juice, soy sauce, and water. Set aside.</li>
+            <li>Preheat a 12-inch skillet over <strong>medium high heat</strong>. Crumble beef into chunks. Add oil to skillet and beef chunks.</li>
+            <li>Let beef cook undisturbed for <strong>2 to 3 minutes</strong> until nicely browned on bottom. Sprinkle green onions (white part), garlic, ginger, and optional red pepper flakes.</li>
+            <li>Toss and break up beef and continue to cook until beef til fully brown. Dab up excess fat with paper towel.</li>
+            <li>Pour in honey mixture and reduce heat to medium. Add cornstarch mixture if you want the sauce thickened. Simmer beef with sauce, stirring frequently for <strong>1 minute</strong>. Adjust taste with soy sauce and salt to preference.</li>
+            <li>Serve warm over rice, sprinkle with green onions (green part).</li>
+        </ol>
+        <p>Note: nutricion facts accounts for meat and rice only, other sides and toppings not included</p>
     <h2>Enjoy!</h2>
 </body>
 </html>
