added files and picture for mongolian beef dish

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <li><a href = "recipes/chicken_meatballs.html">Garlic Butter Chicken Meatballs</a></li>
                 <li><a href = "recipes/ncburrito_bowl.html">Naked Chicken Burrito Bowl</a></li>
                 <li><a href = "recipes/kbeef_bowl.html">Korean Beef Bowl</a></li>
+                <li><a href="recipes/mong_beef.html">Easy Mongolian Beef</a></li>
             </ul>
         <h2>Snacks and Treats</h2>
             <ul>
