laid skeleton for mong beef  dish

--- a/recipes/mong_beef.html
+++ b/recipes/mong_beef.html
@@ -6,6 +6,11 @@
     <title>Easy Mongolian Beef</title>
 </head>
 <body>
-    
+    <h1>Easy Mongolian Beef</h1>
+    <img src="recipe_pics/mong_beef.png" alt = "Mongolian Beef Picture" height = 700 width = 700>
+    <h2>Description</h2>
+    <h2>Ingredients</h2>
+    <h2>Steps</h2>
+    <h2>Enjoy!</h2>
 </body>
 </html>
