completed description of mong beef

--- a/recipes/mong_beef.html
+++ b/recipes/mong_beef.html
@@ -9,6 +9,10 @@
     <h1>Easy Mongolian Beef</h1>
     <img src="recipe_pics/mong_beef.png" alt = "Mongolian Beef Picture" height = 700 width = 700>
     <h2>Description</h2>
+        <p>303 calories, 26 grams of protein</p>
+        <p>Meal prep time: 20 mins, for 4 servings</p>
+        <p>A rich and flavorful dish. A favorite takeout made at home.</p>
+        <p>Credits to My Forking Life</p>
     <h2>Ingredients</h2>
     <h2>Steps</h2>
     <h2>Enjoy!</h2>
