completed ingredients for mong beef

--- a/recipes/mong_beef.html
+++ b/recipes/mong_beef.html
@@ -14,6 +14,20 @@
         <p>A rich and flavorful dish. A favorite takeout made at home.</p>
         <p>Credits to My Forking Life</p>
     <h2>Ingredients</h2>
+        <ul>
+            <li>1 lb flank steak, thinly sliced against the grain</li>
+            <li>2 tablespoon cornstarch</li>
+            <li>2-4 tablespoon canola oil</li>
+            <li>1 yellow onion, sliced</li>
+            <li>2 green onions, chopped with green and white parts separated</li>
+            <li>4 garlic cloved, chopped</li>
+            <li>1 inch ginger chopped</li>
+            <li>1/4 cup low sodium soy sauce</li>
+            <li>1/2 cup water</li>
+            <li>1 tablespoon hoisin sauce</li>
+            <li>3 tablespoon brown sugar</li>
+            <li>Salt to taste</li>
+        </ul>
     <h2>Steps</h2>
     <h2>Enjoy!</h2>
 </body>
