finished mong beef

--- a/recipes/mong_beef.html
+++ b/recipes/mong_beef.html
@@ -29,6 +29,12 @@
             <li>Salt to taste</li>
         </ul>
     <h2>Steps</h2>
+        <ol>
+            <li>Cover flank steak with cornstarch</li>
+            <li>Heat canola oil in a large skillet over <strong>medium high heat</strong>. Add flank steak to frying pan in a single layer making sure the pieces are not touching. Cook on <strong>1-2 minutes</strong> per side until browned. Cook in batched until all steak is cooked. Set aside.</li>
+            <li>Add onion, whites of green onions, garlic, and ginger to skillet and stir fry for about <strong>3 minutes</strong>, until onions have slightly softened. Add soy sauce, water, hoisin sauce, and brown sugar and stir.</li>
+            <li>Add steak to pan along with green parts of the green onion. Remove from heat and serve.</li>
+        </ol>
     <h2>Enjoy!</h2>
 </body>
 </html>
