--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href = "recipes/ncburrito_bowl.html">Naked Chicken Burrito Bowl</a></li>
                 <li><a href = "recipes/kbeef_bowl.html">Korean Beef Bowl</a></li>
                 <li><a href="recipes/mong_beef.html">Easy Mongolian Beef</a></li>
+                <li><a href="recipes/creamycaj.html">Creamy Cajun Chicken Pasta</a></li>
             </ul>
         <h2>Snacks and Treats</h2>
             <ul>
