--- a/recipes/creamycaj.html
+++ b/recipes/creamycaj.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Creamy Cajun Chicken Pasta</h1>
     <img src="recipe_pics/creamycaj.png" alt = "creamy chicken pasta picture">
+    <h2>Description</h2>
+    <h2>Ingredients</h2>
+    <h2>Steps</h2>
+    <h2>Enjoy!</h2>
 </body>
 </html>
