completed description of cajun

--- a/recipes/creamycaj.html
+++ b/recipes/creamycaj.html
@@ -9,6 +9,10 @@
     <h1>Creamy Cajun Chicken Pasta</h1>
     <img src="recipe_pics/creamycaj.png" alt = "creamy chicken pasta picture">
     <h2>Description</h2>
+        <p>516 calories, 38 grams of protein</p>
+        <p>Meal prep time: 45 mins, for 5 servings</p>
+        <p>A delicious way to get all your protein in for a meal. A good balance of macronutrients that keeps you full.</p>
+        <p>Credits to My Protein</p>
     <h2>Ingredients</h2>
     <h2>Steps</h2>
     <h2>Enjoy!</h2>
