completed ingredients section for caj pasta

--- a/recipes/creamycaj.html
+++ b/recipes/creamycaj.html
@@ -14,6 +14,18 @@
         <p>A delicious way to get all your protein in for a meal. A good balance of macronutrients that keeps you full.</p>
         <p>Credits to My Protein</p>
     <h2>Ingredients</h2>
+        <ul>
+            <li>1 tablespoon olive oil</li>
+            <li>1 red onion, diced</li>
+            <li>200 grams mushrooms, sliced</li>
+            <li>1 red pepper</li>
+            <li>500 grams chicken breast, diced</li>
+            <li>1 tablespoon cajun seasoning</li>
+            <li>Pinch salt to taste</li>
+            <li>500 grams pasta</li>
+            <li>11 grams light cream cheese</li>
+            <li>Handful chopped chives, garnish</li>
+        </ul>
     <h2>Steps</h2>
     <h2>Enjoy!</h2>
 </body>
