typo on steps fixed with completed caj pasta page

--- a/recipes/creamycaj.html
+++ b/recipes/creamycaj.html
@@ -23,10 +23,17 @@
             <li>1 tablespoon cajun seasoning</li>
             <li>Pinch salt to taste</li>
             <li>500 grams pasta</li>
+            <li>500 milliliters chicken stock</li>
             <li>11 grams light cream cheese</li>
             <li>Handful chopped chives, garnish</li>
         </ul>
     <h2>Steps</h2>
+        <ol>
+            <li>Heat the olive oil in a large pan. Add the red onion, mushrooms, and pepper strips and cook for a few minutes until softened. Remove from the pan and set aside.</li>
+            <li>Add a little more olive oil if necessary and then add the chicken. Fry until completely cooked through. Add the veggies back along with the cajun seasoning and salt to taste. Stir well to combine.</li>
+            <li>Add the pasta and chicken stock, cover the pan, and leave to simmer for <strong>15 minutes</strong>.</li>
+            <li>Stir through the cream cheese to make a thick, creamy sauce. Serve immediately with chopped chives to garnish.</li>
+        </ol>
     <h2>Enjoy!</h2>
 </body>
 </html>
